# capywfa

./: .editorconfig  .markdownlint.yaml  ChangeLog.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish-to-pypi.yml  static-checks.yml  unit-tests.yml
LICENSES/: MIT.txt
capywfa/: capywfa.py  cdx_support.py  lst_to_sbom.py  verify_sources.py
test/: test_capywfa.py  test_lst_convert.py  test_verify_sources.py
test/fixtures/: alpine-3.20-apk-list.txt  alpine-3.20-manifest.lst  debian-13-manifest.lst
test/fixtures/vcr/: verify_sources_base.yaml  verify_sources_download_failed.yaml
